--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # 选择你的 Python 版本
+        python-version: '3.8'  # 选择你的 Python 版本
 
     - name: Install dependencies
       run: |
